# hands-on-ML

ch10/: tf_tutorial.py  wide_and_deep_nn.py
poetry-demo/: pyproject.toml
