[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["yuki-aerpspace <000000yuki-aerospace@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "3.10.8"
tensorflow = "^2.13.0"
tensorflow-macos = "^2.13.0"
tensorflow-metal = "^1.0.1"
matplotlib = "^3.7.2"
pydot = "^1.4.2"
graphviz = "^0.20.1"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
